monitoring/openshift-logging/03-grafana-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-operator
  annotations:
    openshift.io/node-selector: ""
  labels:
    openshift.io/cluster-monitoring: "true"
