monitoring/openshift-logging/06-grafana-instance.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana-logging
  namespace: grafana-operator
  labels:
    app: grafana-logging
spec:
  to:
    kind: Service
    name: grafana-logging-service
    weight: 100
  port:
    targetPort: grafana-http
  # tls:
  #   termination: reencrypt
  #   destinationCACertificate: ""

  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
